Found bug in alignment with previewing fields and the remove and type label

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -306,11 +306,6 @@ i {
           color:@black;
           margin-bottom:20px;
 
-          &.translate {
-            margin-bottom:0;
-            transform:translateY(25px);
-          }
-
           i {
             color:@brand-primary;
           }
@@ -326,7 +321,7 @@ i {
 
     .preview-edit-options {
       display:inline-block;
-      vertical-align:middle;
+      vertical-align:top;
       margin-bottom:40px;
 
       .remove,
